# IOReversi

./: Board.cpp  Board.h  CMakeLists.txt  Cell.cpp  Cell.h  Client.cpp  Client.h  ConsolePainter.cpp  ConsolePainter.h  Game.cpp  Game.h  GameLogic.cpp  GameLogic.h  HumanPlayer.cpp  HumanPlayer.h  IOEPlayer.cpp  IOEPlayer.h  Painter.h  Player.h  README.md  RegularLogic.cpp  RegularLogic.h  RemotePlayer.cpp  RemotePlayer.h  Server.cpp  Server.h  main.cpp  makefile
Tests/: AIPlayerTest.cpp  BoardClassTest.cpp  CellTest.cpp  RegularLogicTest.cpp  gtest_main.cpp
